style: fix dropdown, subtasks on mobile

--- a/styles/add-task-mobile.css
+++ b/styles/add-task-mobile.css
@@ -2,7 +2,7 @@
   .add-task-content {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 0;
   }
 
   .add-task-container {
@@ -36,11 +36,20 @@
 
   .add-task-button {
     position: fixed;
-    bottom: 4.688rem;
-    width: 100%;
-    padding-bottom: 1.25rem;
+    bottom: 6rem;
+    left: 50%;
+    transform: translateX(-50%);
     display: flex;
     justify-content: center;
+    gap: 1rem;
+    width: max-content;
+    padding: 0.75rem 1.5rem;
+    border-radius: 0.5rem;
+  }
+
+  .section-description,
+  .section-priority {
+    margin-bottom: 0;
   }
 }
 
@@ -48,7 +57,7 @@
   .add-task-content {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 0;
   }
 
   .add-task-title {
@@ -117,10 +126,15 @@
 
   .add-task-button {
     position: fixed;
-    bottom: 4.688rem;
-    width: 100%;
-    padding-bottom: 1.25rem;
+    bottom: 6rem;
+    left: 50%;
+    transform: translateX(-50%);
     display: flex;
+    justify-content: center;
+    gap: 1rem;
+    width: max-content;
+    padding: 0.75rem 1.5rem;
+    border-radius: 0.5rem;
   }
 
   .clear__button {
@@ -129,5 +143,10 @@
 
   .create-task__button {
     font-size: var(--font-size-base);
+  }
+
+  .section-description,
+  .section-priority {
+    margin-bottom: 0;
   }
 }
